// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`template e2e: weapp-vite-tailwindcss-vant-template > renders all pages from app config > weapp-vite-tailwindcss-vant-template::app.wxss 1`] = `
"::before,
::after {
  --tw-content: '';
}
view,
text,
::before,
::after {
  --tw-backdrop-blur:;
  --tw-backdrop-brightness:;
  --tw-backdrop-contrast:;
  --tw-backdrop-grayscale:;
  --tw-backdrop-hue-rotate:;
  --tw-backdrop-invert:;
  --tw-backdrop-opacity:;
  --tw-backdrop-saturate:;
  --tw-backdrop-sepia:;
  --tw-blur:;
  --tw-border-spacing-x: 0;
  --tw-border-spacing-y: 0;
  --tw-brightness:;
  --tw-contain-layout:;
  --tw-contain-paint:;
  --tw-contain-size:;
  --tw-contain-style:;
  --tw-contrast:;
  --tw-drop-shadow:;
  --tw-gradient-from-position:;
  --tw-gradient-to-position:;
  --tw-gradient-via-position:;
  --tw-grayscale:;
  --tw-hue-rotate:;
  --tw-invert:;
  --tw-numeric-figure:;
  --tw-numeric-fraction:;
  --tw-numeric-spacing:;
  --tw-ordinal:;
  --tw-pan-x:;
  --tw-pan-y:;
  --tw-pinch-zoom:;
  --tw-ring-color: #3b82f680;
  --tw-ring-inset:;
  --tw-ring-offset-color: #fff;
  --tw-ring-offset-shadow: 0 0 transparent;
  --tw-ring-offset-width: 0;
  --tw-ring-shadow: 0 0 transparent;
  --tw-rotate: 0;
  --tw-saturate:;
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  --tw-scroll-snap-strictness: proximity;
  --tw-sepia:;
  --tw-shadow: 0 0 transparent;
  --tw-shadow-colored: 0 0 transparent;
  --tw-skew-x: 0;
  --tw-skew-y: 0;
  --tw-slashed-zero:;
  --tw-translate-x: 0;
  --tw-translate-y: 0;
  border-color: currentColor;
  border-style: solid;
  border-width: 0;
  box-sizing: border-box;
}
.i-mdi-moon-waxing-crescent {
  --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='24' height='24'%3E%3Cpath fill='black' d='M12 2a9.9 9.9 0 0 0-3 .46a10 10 0 0 1 0 19.08A10 10 0 1 0 12 2'/%3E%3C/svg%3E");
  -webkit-mask-image: var(--svg);
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-size: 100% 100%;
  background-color: currentColor;
  display: inline-block;
  height: 1em;
  mask-image: var(--svg);
  mask-repeat: no-repeat;
  mask-size: 100% 100%;
  width: 1em;
}
.i-mdi-weather-sunny {
  --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='24' height='24'%3E%3Cpath fill='black' d='M12 7a5 5 0 0 1 5 5a5 5 0 0 1-5 5a5 5 0 0 1-5-5a5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3a3 3 0 0 0 3 3a3 3 0 0 0 3-3a3 3 0 0 0-3-3m0-7l2.39 3.42C13.65 5.15 12.84 5 12 5s-1.65.15-2.39.42zM3.34 7l4.16-.35A7.2 7.2 0 0 0 5.94 8.5c-.44.74-.69 1.5-.83 2.29zm.02 10l1.76-3.77a7.13 7.13 0 0 0 2.38 4.14zM20.65 7l-1.77 3.79a7.02 7.02 0 0 0-2.38-4.15zm-.01 10l-4.14.36c.59-.51 1.12-1.14 1.54-1.86c.42-.73.69-1.5.83-2.29zM12 22l-2.41-3.44c.74.27 1.55.44 2.41.44c.82 0 1.63-.17 2.37-.44z'/%3E%3C/svg%3E");
  -webkit-mask-image: var(--svg);
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-size: 100% 100%;
  background-color: currentColor;
  display: inline-block;
  height: 1em;
  mask-image: var(--svg);
  mask-repeat: no-repeat;
  mask-size: 100% 100%;
  width: 1em;
}
.mx-auto {
  margin-left: auto;
  margin-right: auto;
}
.mt-3 {
  margin-top: 24rpx;
}
.mt-4 {
  margin-top: 32rpx;
}
.block {
  display: block;
}
.flex {
  display: flex;
}
.h-24 {
  height: 192rpx;
}
.min-h-screen {
  min-height: 100vh;
}
.w-24 {
  width: 192rpx;
}
.w-32 {
  width: 256rpx;
}
.w-full {
  width: 100%;
}
.max-w-_b640rpx_B {
  max-width: 640rpx;
}
.flex-col {
  flex-direction: column;
}
.flex-wrap {
  flex-wrap: wrap;
}
.items-center {
  align-items: center;
}
.gap-4 {
  gap: 32rpx;
}
.gap-6 {
  gap: 48rpx;
}
.space-x-8 > view + view,
.space-x-8 > view + text,
.space-x-8 > text + view,
.space-x-8 > text + text {
  --tw-space-x-reverse: 0;
  margin-left: calc(64rpx * (1 - var(--tw-space-x-reverse)));
  margin-right: calc(64rpx * var(--tw-space-x-reverse));
}
.space-y-10 > view + view,
.space-y-10 > view + text,
.space-y-10 > text + view,
.space-y-10 > text + text {
  --tw-space-y-reverse: 0;
  margin-bottom: calc(80rpx * var(--tw-space-y-reverse));
  margin-top: calc(80rpx * (1 - var(--tw-space-y-reverse)));
}
.rounded-2xl {
  border-radius: 32rpx;
}
.rounded-3xl {
  border-radius: 48rpx;
}
.rounded-full {
  border-radius: 9999px;
}
.bg-gray-100 {
  --tw-bg-opacity: 1;
  background-color: rgba(243, 244, 246, var(--tw-bg-opacity, 1));
}
.bg-gray-900 {
  --tw-bg-opacity: 1;
  background-color: rgba(17, 24, 39, var(--tw-bg-opacity, 1));
}
.bg-slate-100 {
  --tw-bg-opacity: 1;
  background-color: rgba(241, 245, 249, var(--tw-bg-opacity, 1));
}
.bg-white {
  --tw-bg-opacity: 1;
  background-color: rgba(255, 255, 255, var(--tw-bg-opacity, 1));
}
.bg-white_f95 {
  background-color: #fffffff2;
}
.bg-_burl_phttps_c_f_fvite_dicebreaker_dtop_flogo_dpng_P_B {
  background-image: url(https://vite.icebreaker.top/logo.png);
}
.bg-_burl_phttps_c_f_fvite_dicebreaker_dtop_ftw-logo_dpng_P_B {
  background-image: url(https://vite.icebreaker.top/tw-logo.png);
}
.bg-gradient-to-r {
  background-image: linear-gradient(to right, var(--tw-gradient-stops));
}
.from-green-400 {
  --tw-gradient-from: #4ade80 var(--tw-gradient-from-position);
  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
  --tw-gradient-to: transparent var(--tw-gradient-to-position);
}
.to-sky-400 {
  --tw-gradient-to: #38bdf8 var(--tw-gradient-to-position);
}
.bg-_blength_c100_v_100_v_B {
  background-size: 100% 100%;
}
.bg-clip-text {
  -webkit-background-clip: text;
  background-clip: text;
}
.bg-no-repeat {
  background-repeat: no-repeat;
}
.p-5 {
  padding: 40rpx;
}
.p-8 {
  padding: 64rpx;
}
.px-4 {
  padding-left: 32rpx;
  padding-right: 32rpx;
}
.px-5 {
  padding-left: 40rpx;
  padding-right: 40rpx;
}
.py-2 {
  padding-bottom: 16rpx;
  padding-top: 16rpx;
}
.py-5 {
  padding-bottom: 40rpx;
  padding-top: 40rpx;
}
.pt-20 {
  padding-top: 160rpx;
}
.text-2xl {
  font-size: 48rpx;
  line-height: 64rpx;
}
.text-3xl {
  font-size: 60rpx;
  line-height: 72rpx;
}
.text-8xl {
  font-size: 192rpx;
  line-height: 1;
}
.text-lg {
  font-size: 36rpx;
  line-height: 56rpx;
}
.text-sm {
  font-size: 28rpx;
  line-height: 40rpx;
}
.text-xl {
  font-size: 40rpx;
  line-height: 56rpx;
}
.text-xs {
  font-size: 24rpx;
  line-height: 32rpx;
}
.font-bold {
  font-weight: 700;
}
.font-extrabold {
  font-weight: 800;
}
.font-medium {
  font-weight: 500;
}
.font-semibold {
  font-weight: 600;
}
.uppercase {
  text-transform: uppercase;
}
.leading-7 {
  line-height: 56rpx;
}
.leading-relaxed {
  line-height: 1.625;
}
.tracking-_b0_d2em_B {
  letter-spacing: 0.2em;
}
.text-rose-700 {
  --tw-text-opacity: 1;
  color: rgba(190, 18, 60, var(--tw-text-opacity, 1));
}
.text-sky-500 {
  --tw-text-opacity: 1;
  color: rgba(14, 165, 233, var(--tw-text-opacity, 1));
}
.text-slate-200 {
  --tw-text-opacity: 1;
  color: rgba(226, 232, 240, var(--tw-text-opacity, 1));
}
.text-slate-400 {
  --tw-text-opacity: 1;
  color: rgba(148, 163, 184, var(--tw-text-opacity, 1));
}
.text-slate-600 {
  --tw-text-opacity: 1;
  color: rgba(71, 85, 105, var(--tw-text-opacity, 1));
}
.text-slate-700 {
  --tw-text-opacity: 1;
  color: rgba(51, 65, 85, var(--tw-text-opacity, 1));
}
.text-slate-800 {
  --tw-text-opacity: 1;
  color: rgba(30, 41, 59, var(--tw-text-opacity, 1));
}
.text-slate-900 {
  --tw-text-opacity: 1;
  color: rgba(15, 23, 42, var(--tw-text-opacity, 1));
}
.text-transparent {
  color: transparent;
}
.text-white {
  --tw-text-opacity: 1;
  color: rgba(255, 255, 255, var(--tw-text-opacity, 1));
}
.underline {
  text-decoration-line: underline;
}
.shadow-sm {
  --tw-shadow: 0 1px 2px 0 #0000000d;
  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 transparent), var(--tw-ring-shadow, 0 0 transparent), var(--tw-shadow);
}
.shadow-xl {
  --tw-shadow: 0 20px 25px -5px #0000001a, 0 8px 10px -6px #0000001a;
  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 transparent), var(--tw-ring-shadow, 0 0 transparent), var(--tw-shadow);
}
.shadow-sky-200_f40 {
  --tw-shadow: var(--tw-shadow-colored);
  --tw-shadow-color: #bae6fd66;
}
.transition {
  transition-duration: 150ms;
  transition-property:
    color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter,
    backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}
.transition-colors {
  transition-duration: 150ms;
  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}
.duration-500 {
  transition-duration: 500ms;
}
.active_cscale-95:active {
  --tw-scale-x: 0.95;
  --tw-scale-y: 0.95;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x))
    skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}
"
`;

exports[`template e2e: weapp-vite-tailwindcss-vant-template > renders all pages from app config > weapp-vite-tailwindcss-vant-template::pages/index/index 1`] = `
"<weapp-layout-default is="layouts/default/index">
  <view class="index--layout-default">
    <view class="min-h-screen bg-gray-100 text-slate-800 transition-colors duration-500">
      <view class="flex flex-col items-center pt-20 space-y-10">
        <view class="flex space-x-8">
          <view
            class="w-24 h-24 bg-_burl_phttps_c_f_fvite_dicebreaker_dtop_flogo_dpng_P_B bg-_blength_c100_v_100_v_B bg-no-repeat"></view>
          <view
            class="w-32 h-24 bg-_burl_phttps_c_f_fvite_dicebreaker_dtop_ftw-logo_dpng_P_B bg-_blength_c100_v_100_v_B bg-no-repeat"></view>
        </view>
        <view
          class="bg-gradient-to-r from-green-400 to-sky-400 bg-clip-text text-xl font-extrabold text-transparent underline">
          weapp-vite &amp; weapp-tailwindcss
        </view>
        <helloworld is="components/HelloWorld/HelloWorld">
          <view
            class="w-full HelloWorld--w-full max-w-_b640rpx_B HelloWorld--max-w-_b640rpx_B mx-auto HelloWorld--mx-auto rounded-3xl HelloWorld--rounded-3xl p-8 HelloWorld--p-8 bg-white_f95 HelloWorld--bg-white_f95 shadow-xl HelloWorld--shadow-xl shadow-sky-200_f40 HelloWorld--shadow-sky-200_f40 flex HelloWorld--flex flex-col HelloWorld--flex-col gap-6 HelloWorld--gap-6">
            <view
              class="text-3xl HelloWorld--text-3xl font-semibold HelloWorld--font-semibold text-sky-500 HelloWorld--text-sky-500">
              Hello weapp-vite + Vant
            </view>
            <view
              class="text-lg HelloWorld--text-lg leading-relaxed HelloWorld--leading-relaxed text-slate-700 HelloWorld--text-slate-700">
              基于 weapp-vite 与 Tailwind CSS，并预先集成了 Vant Weapp
              组件库，助你快速搭建业务界面。
            </view>
            <view
              class="flex HelloWorld--flex flex-wrap HelloWorld--flex-wrap gap-4 HelloWorld--gap-4">
              <van-button
                is="miniprogram_npm/@vant/weapp/button/index"
                data-url="https://vite.icebreaker.top">
                <button
                  activity-type="0"
                  entrance-path=""
                  need-show-entrance=""
                  app-parameter=""
                  business-id="0"
                  class="px-5 HelloWorld--px-5 py-2 HelloWorld--py-2 rounded-full HelloWorld--rounded-full text-sm HelloWorld--text-sm font-medium HelloWorld--font-medium transition HelloWorld--transition active HelloWorld--active scale-95 HelloWorld--scale-95 van-button weapp-button-index--van-button van-button--primary weapp-button-index--van-button--primary van-button--small weapp-button-index--van-button--small"
                  data-detail="null"
                  form-type=""
                  hover-class="van-button--active hover-class"
                  lang=""
                  open-type=""
                  send-message-img=""
                  send-message-path=""
                  send-message-title=""
                  session-from=""
                  style=""
                  role="button"
                  aria-disabled="false">
                  <view class="van-button__text weapp-button-index--van-button__text">
                    复制文档链接
                  </view>
                </button>
              </van-button>
              <van-button
                is="miniprogram_npm/@vant/weapp/button/index"
                data-url="https://vant-contrib.gitee.io/vant-weapp/#/home">
                <button
                  activity-type="0"
                  entrance-path=""
                  need-show-entrance=""
                  app-parameter=""
                  business-id="0"
                  class="px-5 HelloWorld--px-5 py-2 HelloWorld--py-2 rounded-full HelloWorld--rounded-full text-sm HelloWorld--text-sm font-medium HelloWorld--font-medium transition HelloWorld--transition active HelloWorld--active scale-95 HelloWorld--scale-95 van-button weapp-button-index--van-button van-button--default weapp-button-index--van-button--default van-button--small weapp-button-index--van-button--small van-button--plain weapp-button-index--van-button--plain"
                  data-detail="null"
                  form-type=""
                  hover-class="van-button--active hover-class"
                  lang=""
                  open-type=""
                  send-message-img=""
                  send-message-path=""
                  send-message-title=""
                  session-from=""
                  style=""
                  role="button"
                  aria-disabled="false">
                  <view class="van-button__text weapp-button-index--van-button__text">
                    Vant 组件手册
                  </view>
                </button>
              </van-button>
            </view>
            <view class="text-xs HelloWorld--text-xs text-slate-400 HelloWorld--text-slate-400">
              复制后可直接粘贴到浏览器访问
            </view>
          </view>
        </helloworld>
        <view class="i-mdi-moon-waxing-crescent text-8xl"></view>
        <view class="underline">https://vite.icebreaker.top</view>
        <view class="underline">https://tw.icebreaker.top</view>
        <view>
          <van-button is="miniprogram_npm/@vant/weapp/button/index">
            <button
              activity-type="0"
              entrance-path=""
              need-show-entrance=""
              app-parameter=""
              business-id="0"
              class="van-button weapp-button-index--van-button van-button--default weapp-button-index--van-button--default van-button--normal weapp-button-index--van-button--normal"
              data-detail="null"
              form-type=""
              hover-class="van-button--active hover-class"
              lang=""
              open-type=""
              send-message-img=""
              send-message-path=""
              send-message-title=""
              session-from=""
              style=""
              role="button"
              aria-disabled="false">
              <view class="van-button__text weapp-button-index--van-button__text">Vant 按钮</view>
            </button>
          </van-button>
        </view>
        <view>
          <van-button is="miniprogram_npm/@vant/weapp/button/index">
            <button
              activity-type="0"
              entrance-path=""
              need-show-entrance=""
              app-parameter=""
              business-id="0"
              class="van-button weapp-button-index--van-button van-button--primary weapp-button-index--van-button--primary van-button--normal weapp-button-index--van-button--normal van-button--plain weapp-button-index--van-button--plain"
              data-detail="null"
              form-type=""
              hover-class="van-button--active hover-class"
              lang=""
              open-type=""
              send-message-img=""
              send-message-path=""
              send-message-title=""
              session-from=""
              style=""
              role="button"
              aria-disabled="false">
              <view class="van-button__text weapp-button-index--van-button__text">
                打开布局演示页
              </view>
            </button>
          </van-button>
        </view>
      </view>
    </view>
    <van-dialog is="miniprogram_npm/@vant/weapp/dialog/index" id="van-dialog">
      <van-popup is="miniprogram_npm/@vant/weapp/popup/index">
        <van-overlay is="miniprogram_npm/@vant/weapp/overlay/index">
          <van-transition is="miniprogram_npm/@vant/weapp/transition/index"></van-transition>
        </van-overlay>
      </van-popup>
    </van-dialog>
  </view>
</weapp-layout-default>
"
`;

exports[`template e2e: weapp-vite-tailwindcss-vant-template > renders all pages from app config > weapp-vite-tailwindcss-vant-template::pages/layouts/index 1`] = `
"<weapp-layout-default is="layouts/default/index">
  <view class="index--layout-default">
    <view class="min-h-screen bg-slate-100 px-4 py-5">
      <view class="rounded-2xl bg-white p-5 shadow-sm">
        <view class="text-xs font-semibold uppercase tracking-_b0_d2em_B text-rose-700">
          Native Layouts
        </view>
        <view class="mt-3 text-2xl font-bold text-slate-900">Vant 原生模板已接入 layouts</view>
        <view class="mt-3 text-sm leading-7 text-slate-600">当前状态：default</view>
      </view>
      <view class="mt-4 rounded-2xl bg-white p-5 shadow-sm">
        <view class="layout-actions">
          <view class="layout-actions__item">
            <van-button is="miniprogram_npm/@vant/weapp/button/index">
              <button
                activity-type="0"
                entrance-path=""
                need-show-entrance=""
                app-parameter=""
                business-id="0"
                class="van-button weapp-button-index--van-button van-button--primary weapp-button-index--van-button--primary van-button--normal weapp-button-index--van-button--normal van-button--block weapp-button-index--van-button--block"
                data-detail="null"
                form-type=""
                hover-class="van-button--active hover-class"
                lang=""
                open-type=""
                send-message-img=""
                send-message-path=""
                send-message-title=""
                session-from=""
                style=""
                role="button"
                aria-disabled="false">
                <view class="van-button__text weapp-button-index--van-button__text">
                  使用 default 布局
                </view>
              </button>
            </van-button>
          </view>
          <view class="layout-actions__item">
            <van-button is="miniprogram_npm/@vant/weapp/button/index">
              <button
                activity-type="0"
                entrance-path=""
                need-show-entrance=""
                app-parameter=""
                business-id="0"
                class="van-button weapp-button-index--van-button van-button--danger weapp-button-index--van-button--danger van-button--normal weapp-button-index--van-button--normal van-button--block weapp-button-index--van-button--block van-button--plain weapp-button-index--van-button--plain"
                data-detail="null"
                form-type=""
                hover-class="van-button--active hover-class"
                lang=""
                open-type=""
                send-message-img=""
                send-message-path=""
                send-message-title=""
                session-from=""
                style=""
                role="button"
                aria-disabled="false">
                <view class="van-button__text weapp-button-index--van-button__text">
                  切到 admin 布局
                </view>
              </button>
            </van-button>
          </view>
          <view class="layout-actions__item">
            <van-button is="miniprogram_npm/@vant/weapp/button/index">
              <button
                activity-type="0"
                entrance-path=""
                need-show-entrance=""
                app-parameter=""
                business-id="0"
                class="van-button weapp-button-index--van-button van-button--default weapp-button-index--van-button--default van-button--normal weapp-button-index--van-button--normal van-button--block weapp-button-index--van-button--block van-button--plain weapp-button-index--van-button--plain"
                data-detail="null"
                form-type=""
                hover-class="van-button--active hover-class"
                lang=""
                open-type=""
                send-message-img=""
                send-message-path=""
                send-message-title=""
                session-from=""
                style=""
                role="button"
                aria-disabled="false">
                <view class="van-button__text weapp-button-index--van-button__text">关闭布局</view>
              </button>
            </van-button>
          </view>
          <view class="layout-actions__item">
            <van-button is="miniprogram_npm/@vant/weapp/button/index">
              <button
                activity-type="0"
                entrance-path=""
                need-show-entrance=""
                app-parameter=""
                business-id="0"
                class="van-button weapp-button-index--van-button van-button--success weapp-button-index--van-button--success van-button--normal weapp-button-index--van-button--normal van-button--block weapp-button-index--van-button--block van-button--plain weapp-button-index--van-button--plain"
                data-detail="null"
                form-type=""
                hover-class="van-button--active hover-class"
                lang=""
                open-type=""
                send-message-img=""
                send-message-path=""
                send-message-title=""
                session-from=""
                style=""
                role="button"
                aria-disabled="false">
                <view class="van-button__text weapp-button-index--van-button__text">
                  查看当前状态
                </view>
              </button>
            </van-button>
          </view>
          <view class="layout-actions__item">
            <van-button is="miniprogram_npm/@vant/weapp/button/index">
              <button
                activity-type="0"
                entrance-path=""
                need-show-entrance=""
                app-parameter=""
                business-id="0"
                class="van-button weapp-button-index--van-button van-button--default weapp-button-index--van-button--default van-button--normal weapp-button-index--van-button--normal van-button--block weapp-button-index--van-button--block"
                data-detail="null"
                form-type=""
                hover-class="van-button--active hover-class"
                lang=""
                open-type=""
                send-message-img=""
                send-message-path=""
                send-message-title=""
                session-from=""
                style=""
                role="button"
                aria-disabled="false">
                <view class="van-button__text weapp-button-index--van-button__text">返回首页</view>
              </button>
            </van-button>
          </view>
        </view>
      </view>
      <van-dialog is="miniprogram_npm/@vant/weapp/dialog/index" id="van-dialog">
        <van-popup is="miniprogram_npm/@vant/weapp/popup/index">
          <van-overlay is="miniprogram_npm/@vant/weapp/overlay/index">
            <van-transition is="miniprogram_npm/@vant/weapp/transition/index"></van-transition>
          </van-overlay>
        </van-popup>
      </van-dialog>
    </view>
  </view>
</weapp-layout-default>
"
`;
